--- a/src/home.css
+++ b/src/home.css
@@ -1,7 +1,7 @@
 body{
     font-family: "Lucida Grande",Verdana,Arial,Helvetica,sans-serif;
    
-    background-color: #f6f6f6;
+    background-color: #e3e0e0;
     color: #000;
     font-size: 12px;
 
@@ -14,8 +14,8 @@ body{
   
     padding: 5px 10px 4px 5px;
     border-bottom: 1px solid #999;
-    color: #333;
-    font-size: 11px;
+    color: black;
+    font-size: 14px;
     font-weight: bold;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -54,12 +54,15 @@ body{
     }
 
     .mybutton{
-        height: 20px;
+        
         color: #333;
         font-size: 12px;
-        padding-left: 8px;
-        padding-right: 8px;
-        background: url('https://webmail.adams.net/skins/classic/images/listheader.gif?v=ab42.314') repeat-x #f0f0f0;
+        padding-top: 6px;
+        padding-bottom: 6px;
+        padding-left: 14px;
+        padding-right: 14px;
+        
+        /* background: url('https://webmail.adams.net/skins/classic/images/listheader.gif?v=ab42.314') repeat-x #f0f0f0; */
         border: 1px solid #a4a4a4;
         font-weight: bold;
     
