--- a/src/home.css
+++ b/src/home.css
@@ -9,6 +9,8 @@ body{
 
 }
 
+
+
 .mainheading{
     font-size: 35px;
     font-weight: 500;
@@ -19,6 +21,10 @@ body{
     font-size: 35px;
     font-weight: 700;
     color: rgb(61, 61, 61);
+}
+
+.navbg{
+    background-color: #1e4e9d;
 }
 
 
@@ -37,8 +43,66 @@ body{
     background: url('https://webmail.adams.net/skins/classic/images/listheader.gif?v=ab42.314') top left repeat-x #CCC;
 }
 .formdiv{
-    border: 0.8px solid grey;
-    margin: 0px;
+ 
+
+    min-height: 500px;
+}
+
+.container{
+    padding-left:  80px;
+    padding-right: 50px;
+}
+
+.bighead{
+    color:#696969;
+    font-size:29px;
+    line-height: 35px;
+}
+
+.bigflex{
+    display: flex;
+    flex-direction: row;
+}
+
+.bigsub{
+    color:#696969;
+    font-size:20px;
+    line-height: 20px;
+    margin-top: 25px;
+    font-weight: 500;
+}
+
+.bigpara{
+    color:#696969;
+    font-size:14px;
+    line-height: 20px;
+    margin-top: 18px;
+    font-weight: 400;
+    
+    text-align: justify;
+}
+
+.biglink{
+    font-size: 15px;
+    text-decoration: underline;
+}
+
+.fleximage{
+    width:300px;
+}
+
+.talkimage{
+    width: 150px;
+}
+
+.purple{
+    color:purple;
+    font-size:15px;
+    
+}
+
+.service{
+    width: 200px;
 }
 .formrow{
 	border: 0px;
@@ -94,3 +158,55 @@ body{
         text-decoration: none;
         font-weight: bold;
     }
+
+
+    @media only screen and (max-width: 750px) {
+
+       
+        
+        .bighead{
+            color:#696969;
+            font-size:24px;
+            line-height: 25px;
+            text-align: center;
+        }
+
+
+
+        .bigflex{
+            display: block;
+        }
+        
+        .bigsub{
+            color:#696969;
+            font-size:17px;
+            line-height: 20px;
+            margin-top: 20px;
+            font-weight: 500;
+            text-align: center;
+        }
+        
+        .bigpara{
+            color:#696969;
+            font-size:14px;
+            line-height: 20px;
+            margin-top: 18px;
+            font-weight: 400;
+            
+            text-align: justify;
+        }
+        
+        .biglink{
+            font-size: 15px;
+            text-decoration: underline;
+            text-align: center;
+        }
+        
+        .fleximage{
+            width:300px;
+        }
+        
+        .talkimage{
+            width: 150px;
+        }
+      }
